# docker-django-poetry

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
myapp/: urls.py  views.py
myapp/templates/myapp/: home.html
mysite/: settings.py  urls.py
