[tool.poetry]
name = "testing"
version = "0.1.0"
description = "testing custom poetry image"
authors = ["YashMarmat <yashmarmat08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
